@@ -336,6 +336,30 @@ TEAM_BLUE_6  15 # blue portion of team 6's color
 TEAM_BLUE_7  15 # blue portion of team 7's color
 TEAM_BLUE_8   7 # blue portion of team 8's color
 
+# Help stuff
+
+# This is a message that will be displayed if someone uses the /help chat
+# command without arguments:
+
+HELP_INTRODUCTORY_BLURB
+
+# to add your own help topics you can use the following command:
+
+# ADD_HELP_TOPIC <identifier> "short description" "help\ntext\nthat\ncan\nspan\nmany\nlines"
+
+# the quotes are required if you want to use spaces.
+# if the identifier contains underscores (_) it will be treated as a
+# sub-identifier. For example, if you have an identifier "rules" and an
+# identifier "rules_swearing", the last one will not appear on the listing
+# you get with a plain "/help", but it will be at the bottom of the text
+# you get with /help rules. You can nest them as deeply as you want, but
+# remember that the player who seeks help has to type your identifiers...
+
+# to get rid of a help command (either in scripts of if it was added by
+# accident you can use
+
+# REMOVE_HELP_TOPIC <identifier>
+
 #TEAM_ALLOW_SHUFFLE_UP 0            # if set to 1, players are allowed to change their position in the team as they wish. If 0, they only can drop in rank.
 TEAM_CENTER_IS_BOSS 1               # if set to 1, the center player is the team's boss. If at 0, it's the player who is on that team longest.
 
